@@ -1,3 +1,7 @@
+2004-12-17 Scott Dattalo <scott@dattalo.com>
+	* gui/gui_main.cc, src/interface.cc: Added experimental code to
+	test threading.
+	
 2004-12-16 Scott Dattalo <scott@dattalo.com>
 	* gui/gui_main.cc, gui/gui_menu.cc: Use the interface instead of
 	the cpu pointer to initiate simulation.
